--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ settings/*.wsdt
 settings/*.wspos  
 
 # IAR Debug Exe  
-**/Exe/*.sim  
+/Exe/ 
 
 # IAR Debug Obj  
 Obj/
-**List/*.lst 
-**List/*.s 
+List/
+List/
 
